jk this should fr work tho

--- a/.github/workflows/godriver-perf-notif.yml
+++ b/.github/workflows/godriver-perf-notif.yml
@@ -60,8 +60,8 @@ jobs:
               console.log(`Found ${documents.length} documents matching the query.`);
 
               if (documents.length > 0) {
-                commentBody += `| Test Name | H-Score | Link |`;
-                commentBody += `|---|---|---|`;
+                commentBody += `| Test Name | H-Score | Performance Baron |\n`;
+                commentBody += `|---|---|---|\n`;
                 documents.forEach(doc => {
                   const testName = doc.test || doc._id.toString();
                   const hScore = '0.6'; // dummy h-score for now
