--- a/.github/workflows/godriver-perf-notif.yml
+++ b/.github/workflows/godriver-perf-notif.yml
@@ -65,9 +65,10 @@ jobs:
                 documents.forEach(doc => {
                   const testName = doc.test || doc._id.toString();
                   const hScore = '0.6'; // dummy h-score for now
-                  const link = '[Link](https://example.com)'; // dummy link for now
+                  const link = '[link](https://example.com)'; // dummy link for now
                   commentBody += `| ${testName} | ${hScore} | ${link} |\n`;
                 });
+                commentBody += `*For a comprehensive view of all microbenchmark results for this PR's commit, please visit: [link](https://example.com).*`
               } else {
                 commentBody = "There were no significant changes to the performance to report.";
                 console.log("No documents found.");
