Change PR comment workflow to manual dispatch

--- a/.github/workflows/new-pr-comment.yml
+++ b/.github/workflows/new-pr-comment.yml
@@ -1,8 +1,9 @@
 name: New Pull Request Commenter
 
 on:
-  pull_request:
-    types: [opened] # This action triggers only when a pull request is opened
+  workflow_dispatch
+  # pull_request:
+  # types: [opened] # This action triggers only when a pull request is opened
 
 jobs:
   add-pr-comment:
